--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
     state: present
   environment:
     http_proxy: '{{ proxy.http }}'
-    https_proxy: '{{ proxy.https }}'
+    https_proxy: '{{ proxy.https | default(proxy.http) }}'
 
 - name: add netdata necessary repositories
   apt_repository:
@@ -23,11 +23,11 @@
     state: present
     filename: netdata
   with_items:
-    - "deb https://packagecloud.io/netdata/netdata/debian/ {{ ansible_distribution_release }} main"
-    - "deb-src https://packagecloud.io/netdata/netdata/debian/ {{ ansible_distribution_release }} main"
+    - "deb https://packagecloud.io/netdata/netdata/{{ ansible_distribution | lower  }}/ {{ ansible_distribution_release }} main"
+    - "deb-src https://packagecloud.io/netdata/netdata/{{ ansible_distribution | lower }}/ {{ ansible_distribution_release }} main"
   environment:
     http_proxy: '{{ proxy.http }}'
-    https_proxy: '{{ proxy.https }}'
+    https_proxy: '{{ proxy.https | default(proxy.http) }}'
 
 - name: install netdata package
   apt:
@@ -36,7 +36,7 @@
     update_cache: yes
   environment:
     http_proxy: '{{ proxy.http }}'
-    https_proxy: '{{ proxy.https }}'
+    https_proxy: '{{ proxy.https | default(proxy.http) }}'
 
 - name: configure netdata
   template:
